plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.6'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'ee.valiit'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// Spring Boot
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework:spring-test'

	// Swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.3'

	// Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// PostgreSQL
	runtimeOnly 'org.postgresql:postgresql'

	// H2 Database
	testImplementation 'com.h2database:h2'

	// SQL with parameter values
	implementation 'p6spy:p6spy:3.9.1'

	// Apache POI — Excel failide lugemine ja kirjutamine
	implementation 'org.apache.poi:poi-ooxml:5.3.0'

	// MapStruct
	implementation 'org.mapstruct:mapstruct:1.6.3'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
}

compileJava {
	options.compilerArgs += ['-Amapstruct.unmappedTargetPolicy=IGNORE',
	                         '-Amapstruct.defaultComponentModel=spring']
}

tasks.named('test') {
	useJUnitPlatform()
}